--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
 	error_log /etc/nginx/logs/nginx-error.log;
 
     server {
-	    root /www/html;
+	    root /www/html/;
 
         listen 8080;
 
