--- a/Kubernetes-Deployment.yml
+++ b/Kubernetes-Deployment.yml
@@ -14,3 +14,20 @@ spec:
           image: riky126/cicd-demo:v1
           ports:
             - containerPort: 8080
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+ name: helloworld
+spec:
+ type: NodePort
+ selector:
+   app: helloworld
+ ports:
+   - name: client
+     protocol: TCP
+     port: 80
+     nodePort: 32080
+ selector:
+   app: helloworld
