--- a/demo-chart/values.yaml
+++ b/demo-chart/values.yaml
@@ -5,9 +5,9 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: stable
-  pullPolicy: IfNotPresent
+  repository: riky126/cicd-demo
+  tag: tagVersion
+  pullPolicy: IfNotPresent #| Always
 
 imagePullSecrets: []
 nameOverride: ""
@@ -33,7 +33,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8080
 
 ingress:
   enabled: false
